# HNG-Stage-2

./: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2025-10-26-110224-0000_create_countries/: up.sql
migrations/2025-10-26-163326-0000_add_cache_metadata/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: config.rs  config_scope.rs  db.rs  mod.rs
src/models/: countries_models.rs  mod.rs  models.rs
src/routes/: countries_data.rs  healthz.rs  me.rs  mod.rs
