[package]
name = "countries-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
r2d2 = "0.8" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
diesel = { version = "2.3.3", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "2.3.0"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2.32"
actix-files = "0.6.8"
mime = "0.3"
